chore: fix code blocks overflow in admonitions

--- a/.asciidoctor/docs.css
+++ b/.asciidoctor/docs.css
@@ -1722,21 +1722,23 @@ section {
   display:inline-block;
   text-decoration:none
 }
-.admonitionblock #description,
-.admonitionblock p {
+.admonitionblock{
+  margin-bottom:var(--rh-space-lg,1rem)
   font-size:var(--rh-font-size-body-text-md,1rem)
 }
-.admonitionblock {
-  width:-moz-fit-content;
-  width:fit-content;
-  margin-bottom:var(--rh-space-lg,1rem)
+.admonitionblock table {
+  margin:0;
+  border:none;
+  width:fit-content
+}
+.admonitionblock td {
+  margin:0;
+  border:none;
+  display:block
 }
 .admonitionblock .title {
-  color:#002952;
-  font-weight: 700
-}
-.admonitionblock table, .admonitionblock td {
   margin:0;
-  border:none
+  color:#002952;
+  font-weight:700
 }
 
